Update project with new parallel file processing and performance optimizations

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,8 @@
 cmake_minimum_required(VERSION 3.10)
 project(ECG_MITBIH_Sequential)
 
-set(CMAKE_CXX_STANDARD 11)
+set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-# Add the executable; include all source files
 add_executable(ecg_app src/main.cpp src/ecg_processor.cpp)
+target_link_libraries(ecg_app stdc++fs)
